ready to deploy

--- a/config/config.json
+++ b/config/config.json
@@ -6,18 +6,8 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
-  "test": {
-    "username": "userbaru",
-    "password": "bebas",
-    "database": "postgres",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
-  },
   "production": {
-    "username": "userbaru",
-    "password": "bebas",
-    "database": "postgres",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "use_env_variable": "DATABASE_URL"
+
   }
 }
